fixed an overlapping problem

--- a/css/stisla.css
+++ b/css/stisla.css
@@ -293,7 +293,7 @@ body {
 	margin-bottom: 20px;
 	/* text-transform: uppercase; */
 	letter-spacing: 1.5px;
-	line-height: 0;
+	/* line-height: 0; */
 	font-size: 16px;
 }
 
